# grundsteuereinspruch-pdf-creator

./: .gitignore  Cargo.toml  env.default  letter.html  test-payload-live.sh  test-payload.sh  todo.md  update-templates.sh
.github/workflows/: ci.yml
data/db/: email.json  sender.json
data/templates/: error.html  index.html  invoice.html  letter.html  list.html  loading.html
deploy/: backup.sh  create-ssh-deploy-key.sh  deploy.sh
deploy/cloudinit/: init_nginx.yml  install_nginx-pdfcreator.sh  install_nginx.sh  tlscert_nginx.sh
deploy/cloudinit/conf/: compression.conf  feedback.service  pdfcreator.service
deploy/cloudinit/vhosts/: app.grundsteuereinspruch.online  nginx-http.conf  nginx-rp.conf  nginx-ssl.conf
src/: config.rs  crypt.rs  db.rs  form.rs  helper.rs  html.rs  lib.rs  main.rs  objects.rs  pdf.rs  routes.rs
src/send/: mod.rs  send.rs
test/: test-payload-all-live.sh  test-payload-all.sh  test-payload-empty-dates.sh  test-payload-live.sh  test-payload-payment-live.sh  test-payload-payment.sh  test-payload.sh
