[package]
name = "pdf-creator-shuttle"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.8", features = ["web-axum"] }
tracing = "0.1.37"
anyhow = "1.0.68"
axum = "0.6"
chrono = { version = "0.4.23", features = ["unstable-locales"] }
data-encoding = "2.3.3"
lettre = {version = "0.10", features = ["builder"] }
sync_wrapper = "0.1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = "1.20"
html2pdf = "0.5"
rand = "0.8.5"
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
structopt = "0.3"
tera = "1.17"
dotenv = "0.15.0"
#tower-request-id = "0.2.1"
#tower_governor = "0.0.3"